--- a/views/new-transaction.ejs
+++ b/views/new-transaction.ejs
@@ -12,7 +12,7 @@
 <body>
     <div class="max-w-xl mx-auto bg-white rounded-lg shadow-md p-8 mt-10">
         <h1 class="text-xl font-semibold text-gray-800 mb-6">Add New Transaction</h1>
-        <form action="/transactions" method="POST" class="space-y-4">
+        <form action="/transactions/new" method="POST" class="space-y-4">
 
             <div>
                 <label class="block mb-1 text-sm font-medium">Employee ID</label>
@@ -27,9 +27,9 @@
 
             <div>
                 <label class="block mb-1 text-sm font-medium">Category</label>
-                <select name="type" class="w-full border px-4 py-2 rounded">
+                <select name="type" class="w-full border px-4 py-2 rounded" required>
                     <%     categories.forEach(cat=> { %>
-              <option value="<%= cat.name %>">
+              <option value="<%= cat.id %>">
                 <%= cat.name %>
               </option>
               <% }) %>
@@ -38,17 +38,17 @@
 
             <div>
                 <label class="block mb-1 text-sm font-medium">Description</label>
-                <input type="text" name="description" maxlength="50" class="w-full border px-4 py-2 rounded">
+                <input type="text" name="description" maxlength="50" class="w-full border px-4 py-2 rounded" required>
             </div>
 
             <div>
                 <label class="block mb-1 text-sm font-medium">Amount</label>
-                <input type="number" name="amount" step="0.01" class="w-full border px-4 py-2 rounded">
+                <input type="number" name="amount" step="0.01" class="w-full border px-4 py-2 rounded" required>
             </div>
 
             <div>
                 <label class="block mb-1 text-sm font-medium">Date</label>
-                <input type="date" name="date" class="w-full border px-4 py-2 rounded">
+                <input type="date" name="date" class="w-full border px-4 py-2 rounded" required>
             </div>
 
             <div class="flex justify-between pt-4">
