--- a/views/new-category.ejs
+++ b/views/new-category.ejs
@@ -10,7 +10,7 @@
 <body>
     <div class="max-w-xl mx-auto bg-white rounded-lg shadow-md p-8 mt-10">
   <h1 class="text-xl font-semibold text-gray-800 mb-6">Add New Category</h1>
-  <form action="/category/new" method="POST" class="space-y-4">
+  <form action="/categorys/new" method="POST" class="space-y-4">
 
     <div>
       <label class="block mb-1 text-sm font-medium">Name</label>
