--- a/views/categorys.ejs
+++ b/views/categorys.ejs
@@ -11,9 +11,9 @@
 <body>
     <%- include('partials/header') %>
 
-        <div class="max-w-6xl mx-auto">
+        <div class="max-w-6xl mx-auto my-6">
             <!-- Header -->
-            <div class="flex justify-between items-center mb-6 mt-6">
+            <div class="flex justify-between items-center mb-6">
                 <h1 class="text-2xl font-bold">Transaction Categories</h1>
                 <div>
                     <button class="bg-indigo-600 text-white px-4 py-2 rounded text-sm hover:bg-indigo-700"><a
