--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,7 @@
           <li><a href="/employees" class="hover:text-indigo-600">Employees</a></li>
           <li><a href="/transactions" class="hover:text-indigo-600">Transactions</a></li>
           <li><a href="/categorys" class="hover:text-indigo-600">Categorys</a></li>
+          <li><a href="/Login" class="hover:text-indigo-600">Login</a></li>
         </ul>
       </nav>
     </div>
