--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -88,7 +88,7 @@
                   <%= new Date(tx.purchase_date).toLocaleDateString(undefined, {year: "numeric" , month: "long" ,
                     day: "numeric" }) %>
                 </td>
-                <td>
+                <td class="px-6 py-4">
                   <form action="/transactions/<%= tx.id %>/delete" method="POST">
                     <button class="border px-4 py-2 rounded text-sm">Delete</button>
                   </form>
