--- a/views/categorys.ejs
+++ b/views/categorys.ejs
@@ -53,7 +53,7 @@
             'text-gray-600' %>">
                                     <%= cat.type %>
                                 </td>
-                                <td>
+                                <td class="px-6 py-4">
                                     <form action="/categorys/<%= cat.id %>/delete" method="POST">
                                         <button class="border px-4 py-2 rounded text-sm">Delete</button>
                                     </form>
