--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -98,7 +98,7 @@
   month: "long",
   day: "numeric"}) %>
                                     </td>
-                                    <td>
+                                    <td class="py-4 px-6">
                                         <form action="/employees/<%= emp.id %>/delete" method="POST">
                                             <button class="border px-4 py-2 rounded text-sm">Delete</button>
                                         </form>
