--- a/views/login.ejs
+++ b/views/login.ejs
@@ -92,7 +92,7 @@
 <section class="bg-red border border-indigo-100 p-6 rounded-xl text-center">
                 <h2 class="text-2xl font-semibold text-indigo-700 mb-2">Welcome!</h2>
                 <p class="text-gray-600">Access is required to perform certain tasks. <br>
-                    Please refer to the README to gain access.  </p>
+                    Please refer to the <a href="https://github.com/monroeaustin/inventory-app/tree/main" class="text-primary hover:underline" target="_blank">README</a> to gain access.  </p>
             </section>
         </main>
      <!-- Footer -->
