--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,36 @@
                 <p class="text-gray-600">Please navigate and look around the system using the menu above.</p>
             </section>
         </main>
+                <div class=" bg-white shadow-md rounded-lg max-w-6xl mx-auto">
+                    <table class="min-w-full text-sm text-left">
+                        <thead class="bg-gray-100 uppercase text-gray-700 text-xs border-b">
+                            <tr>
+                                <th class="px-6 py-4">ID</th>
+                                <th class="px-6 py-4">TimeStamp</th>
+                                <th class="px-6 py-4">Description</th>
+                              
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% system_logs.forEach(sytemLog=> { %>
+                                <tr class="border-b hover:bg-gray-50">
+                                    <td class="px-6 py-4">
+                                        <%= sytemLog.id %>
+                                    </td>
+                                    
+                                    <td class="px-6 py-4">
+                                        <%= sytemLog.log %>
+                                    </td>
+                                    <td class="px-6 py-4">
+                                        <%= sytemLog.description %>
+                                    </td>
+                                </tr>
+                                <% }) %>
+                        </tbody>
 
+
+                    </table>
+                </div>
         <!-- Footer -->
         <footer class="mt-20 text-center text-sm text-gray-400 py-6">
             &copy; 2025 Employee Manager. All rights reserved.
