--- a/views/login-error.ejs
+++ b/views/login-error.ejs
@@ -95,16 +95,16 @@
     <p class="text-xs text-center text-gray-500">Don’t have an account?
       <a href="/" class="text-primary hover:underline">Sign up</a>
     </p>
+    <p class="text-xs text-center text-gray-500">Ready to head home?
+        <a href="/" class="text-primary hover:underline">Home</a>
   </div>
 
   <!-- Optional Info Block -->
-  <section class="bg-blue-50 border border-indigo-100 p-6 rounded-xl text-center mt-6 w-full max-w-md shadow-sm">
-    <h2 class="text-lg font-semibold text-indigo-700 mb-2">Need access?</h2>
-    <p class="text-sm text-gray-600">
-      Access is required to perform certain tasks. <br />
-      Please refer to the README to gain proper admin credentials.
-    </p>
-  </section>
+  <section class="bg-red border border-indigo-100 p-6 rounded-xl text-center">
+                <h2 class="text-2xl font-semibold text-indigo-700 mb-2">Welcome!</h2>
+                <p class="text-gray-600">Access is required to perform certain tasks. <br>
+                    Please refer to the <a href="https://github.com/monroeaustin/inventory-app/tree/main" class="text-primary hover:underline" target="_blank">README</a> to gain access.  </p>
+            </section>
 
 </body>
 
